includs Jenkins_Output & CMD tests

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>tutorialsNinja.TestCases.LoginTest.verifyLoginWithNoCredentials</td></tr>
+<tr><td>tutorialsNinja.TestCases.LoginTest.verifyLoginWithValidCredentials</td></tr>
+<tr><td>tutorialsNinja.TestCases.LoginTest.verifyLoginWithInvalidEmailValidPassword</td></tr>
+<tr><td>tutorialsNinja.TestCases.LoginTest.verifyLoginWithInvalidCredentials</td></tr>
 </table>
