--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,82 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:54</td>   <td>-53272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:27</td>   <td>-20632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidEmailInvalidPassword()[pri:2, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">verifyLoginWithValidEmailInvalidPassword</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>24/08/12 00:53:15</td>   <td>-32092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCartTest.validatingValidProduct()[pri:1, instance:tutorialsNinja.TestCases.AddToCartTest@482bce4f]">validatingValidProduct</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:45</td>   <td>-61882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.registerSetup()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&gt;&gt;registerSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>24/08/12 00:53:22</td>   <td>-25230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddToCartTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.AddToCartTest@482bce4f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:44</td>   <td>-63488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyRegisterWithWrongConfirmPassword()[pri:4, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">verifyRegisterWithWrongConfirmPassword</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:10</td>   <td>-37293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchProductTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:05</td>   <td>-42550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchProductTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">&gt;&gt;loginSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:05</td>   <td>-42550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchProductTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">&gt;&gt;loginSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:04</td>   <td>-43422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProductTest.verifySearchInvalidProduct()[pri:2, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">verifySearchInvalidProduct</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:34</td>   <td>-13036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidEmailValidPassword()[pri:3, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">verifyLoginWithInvalidEmailValidPassword</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:40</td>   <td>-6971</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithInvalidCredentials()[pri:4, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">verifyLoginWithInvalidCredentials</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:45</td>   <td>-61882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.registerSetup()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&gt;&gt;registerSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>24/08/12 00:53:15</td>   <td>-31818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddToCartTest.AddToCartTestSetup()[pri:0, instance:tutorialsNinja.TestCases.AddToCartTest@482bce4f]">&gt;&gt;AddToCartTestSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>24/08/12 00:53:22</td>   <td>-25316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCartTest.validateCompleteCheckoutWithValidProductPositiveFlow()[pri:2, instance:tutorialsNinja.TestCases.AddToCartTest@482bce4f]">validateCompleteCheckoutWithValidProductPositiveFlow</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:42</td>   <td>-5645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&gt;&gt;loginSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:45</td>   <td>-61882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.registerSetup()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&gt;&gt;registerSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:52:58</td>   <td>-48716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProductTest.verifySearchValidProduct()[pri:1, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">verifySearchValidProduct</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:42</td>   <td>-5645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&gt;&gt;loginSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:46</td>   <td>-1041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithNoCredentials()[pri:5, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">verifyLoginWithNoCredentials</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>24/08/12 00:53:22</td>   <td>-25230</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddToCartTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.AddToCartTest@482bce4f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:54</td>   <td>-53272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:54</td>   <td>-53272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:09</td>   <td>-37835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchProductTest.verifySearchNoProduct()[pri:3, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">verifySearchNoProduct</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:10</td>   <td>-37293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchProductTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="d477ed">  <td>24/08/12 00:53:15</td>   <td>-31818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddToCartTest.AddToCartTestSetup()[pri:0, instance:tutorialsNinja.TestCases.AddToCartTest@482bce4f]">&gt;&gt;AddToCartTestSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:45</td>   <td>-61882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;RegisterTest.registerSetup()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&gt;&gt;registerSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:42</td>   <td>-5645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&gt;&gt;loginSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:05</td>   <td>-42550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SearchProductTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">&gt;&gt;loginSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:54</td>   <td>-53272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;RegisterTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:42</td>   <td>-5645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&gt;&gt;loginSetup</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:50</td>   <td>-57006</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyRegisterWithNoDetails()[pri:5, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">verifyRegisterWithNoDetails</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="697363">  <td>24/08/12 00:53:10</td>   <td>-37293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SearchProductTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.SearchProductTest@55b53d44]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="90fcbb">  <td>24/08/12 00:53:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@366647c2]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:28</td>   <td>-78791</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyRegisterWithAllDetails()[pri:2, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">verifyRegisterWithAllDetails</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
-<tr bgcolor="69ab9f">  <td>24/08/12 00:52:36</td>   <td>-70785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegisterTest.verifyRegisterWithExistingEmail()[pri:3, instance:tutorialsNinja.TestCases.RegisterTest@69fb6037]">verifyRegisterWithExistingEmail</td> 
-  <td>main@2122049087</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>24/08/16 14:32:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.loginSetup()[pri:0, instance:tutorialsNinja.TestCases.LoginTest@53aad5d5]">&gt;&gt;loginSetup</td> 
+<td>&nbsp;</td>  <td>main@1825738663</td>   <td></td> </tr>
+<tr bgcolor="7caf88">  <td>24/08/16 14:32:28</td>   <td>2562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.verifyLoginWithValidEmailInvalidPassword()[pri:2, instance:tutorialsNinja.TestCases.LoginTest@53aad5d5]">verifyLoginWithValidEmailInvalidPassword</td> 
+  <td>main@1825738663</td>   <td></td> </tr>
 </table>
